--- a/figma.css
+++ b/figma.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+
+/*startt global styles */
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth; /*عشان ينزل ويطلع بشويش*/
 }
 
 body{
@@ -18,6 +21,9 @@ a{
 ul{
  list-style: none;   
 }
+
+/* end of global style */
+
 .container{
     margin: 0 7rem;
     height: 100%; /*للصفحة كاملة*/
@@ -423,9 +429,9 @@ padding-top: 50px;
 
     .sevim{
         padding: 15px;
-        /* align-items: center;
-        justify-content: center;*/
-        
+        align-items: center;
+        justify-content: center;
+        max-width: 100%;
     }
 
     .Eighth{
@@ -582,3 +588,14 @@ padding-top: 50px;
         justify-content: space-between;
         margin-top: 40px;
     }
+.ToTop {
+    position: fixed; /*عشان يضل ظاهر على الشاشة */
+    left: 3rem;
+    bottom: 3rem;
+   
+}
+.ToTop a {
+    padding: 0.5rem;
+    border-radius: 50%;
+    background-color: #0B9586;
+}
